# HdT

./: CHANGELOG.md  README.md  default.nix  flake.nix  hdt.cabal  hdt.dhall  shell.nix  style.css
app/: Main.hs
app/pdqmatch/: Main.hs
app/pdqx/: Main.hs
resources/: HdTPDFViewer.desktop  hdt.desktop  pdq.rnc
sample-config/: edit-pdq.sh
src/: Config.hs  CustomQQ.hs  InitConf.hs  PdQ.hs  PrepSVG.hs  Utils.hs
src/config/: edit-pdq.sh  insert-layer.sh  pdf-to-svg.sh  style.css
