cabal-version:      3.0
name:               hdt
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrei Mikhailov
maintainer:         a.mkhlv@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      PdQ,
      Config,
      PrepSVG,
      Utils,
      InitConf
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        text,
        containers,
        hxt,
        hxt-extras,
        data-default,
        dhall,
        directory,
        -- shh,
        gi-gio,
        -- gi-gio >= 2.0.38 && < 2.1, 
        PyF,
        filepath,
        system-fileio,
        prettyprinter

    hs-source-dirs:   src
    default-language: Haskell2010

executable hdtview
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        text,
        hdt,
        directory,
        data-default,
        haskell-gi-base,
        gi-gtk4,
        gi-gdk4,
        gi-gio,
        -- gi-gio >= 2.0.38 && < 2.1,
        gi-gobject,
        gi-cairo,
        gi-cairo-render,
        gi-cairo-connector,
        gi-poppler,
        gi-rsvg,
        optparse-applicative,
        dhall,
        vector

    hs-source-dirs:   app
    default-language: Haskell2010
